--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
   "tasks": {
-    "start": "deno run --allow-read --allow-env --allow-net src/index.ts"
+    "start": "deno run --allow-read --allow-env --allow-net main.ts & deno run --allow-read --allow-env --allow-net wss.js"
   },
   "imports": {
     "express": "npm:express@^5.1.0"
